# SamSearchV3

./: .env.example  .gitignore  LICENSE  README.md  Start SamSearch.bat  Stop SamSearch.bat  TEST_GUIDE.md  clear-rate-limits.py  docker-compose.production.yml  docker-compose.yml  start-celery.bat  start.ps1  stop.ps1  test_search_flow.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20260205_0958_361ffec74425_add_past_performance_contract_.py  20260206_1303_e3eeacfbfe2e_remove_unused_profile_fields.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  jobs.py  profiles.py  router.py  search.py
backend/app/core/: encryption.py  logging_config.py  middleware.py  rate_limiter.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  audit_log.py  profile.py  search.py  user.py
backend/app/schemas/: __init__.py  profile.py  search.py  user.py
backend/app/services/: ai_scorer.py  audit_service.py  sam_client.py  token_blacklist.py  usage_tracker.py
backend/app/tasks/: celery_app.py  scoring_tasks.py
backend/benchmarks/: usage_tracker_benchmark.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_encryption.py  test_redis_session.py  test_sam_client.py  test_scoring_top10.py  test_security.py  test_security_hardening.py  test_usage_tracker_atomic.py
frontend/: Dockerfile  index.html  (+6 more)
(+50 files in other folders)
