[project]
name = "samsearch-backend"
version = "1.0.0"
description = "AI-powered SAM.gov government contract search platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PERF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning:pythonjsonlogger",
    "ignore::DeprecationWarning:pytest_asyncio",
]

[tool.black]
line-length = 100
target-version = ["py311"]
